force-app/main/default/objects/Field_Tracker_Field__mdt/Field_Tracker_Field__mdt.object-meta.xml
<CustomObject>
    <label>Field Tracker Field</label>
    <pluralLabel>Field Tracker Fields</pluralLabel>
</CustomObject>