force-app/main/default/objects/Field_Tracker_Field__mdt/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <description>Field to be tracked</description>
    <label>Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>