force-app/main/default/objects/Field_Tracker_Field__mdt/fields/Field_Label__c.field-meta.xml
<CustomField>
    <fullName>Field_Label__c</fullName>
    <label>Field (Label)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>