force-app/main/default/objects/Field_Tracker_Field__mdt/fields/Field_Tracker_Object__c.field-meta.xml
<CustomField>
    <fullName>Field_Tracker_Object__c</fullName>
    <label>Field Tracker Object</label>
    <referenceTo>Field_Tracker_Object__mdt</referenceTo>
    <relationshipLabel>Field Tracker Fields</relationshipLabel>
    <relationshipName>Field_Tracker_Fields</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>